:lipstick: fixing styles (spacing, fonts, specificity...)

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,7 +21,7 @@ h6 {
 }
 
 a:hover {
-  color: #40bcf4 !important;
+  color: #40bcf4;
 }
 
 .margin-bottom {
