--- a/frontend/src/modules/app/components/footer/styles.css
+++ b/frontend/src/modules/app/components/footer/styles.css
@@ -2,7 +2,7 @@ footer {
   background-color: #2c3440;
   padding: 2rem;
   display: block;
-  margin-top: 8rem;
+  margin-top: 3.5rem;
 }
 
 footer .list a {
