--- a/frontend/src/modules/game-browser/styles.css
+++ b/frontend/src/modules/game-browser/styles.css
@@ -1,61 +1,43 @@
-.game-grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    grid-gap: 40px;
-    margin-right: 2%;
-    margin-left: 2%;
+.game-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 40px;
+  margin-right: 2%;
+  margin-left: 2%;
 }
 
-.game-card{
-    border: 2px solid #373a3e;
+.game-card {
+  border: 2px solid #373a3e;
 }
 
-.game-card:hover{
+.game-card:hover {
   box-shadow: 0 0 30px #373a3e;
 }
 
-.summary {
-    text-align: justify;
-    font-size: 16px;
-    line-height: 1.75rem;
-    letter-spacing: 0.025rem;
-    text-shadow: 0 0 7px rgba(0, 0, 0, 0.45);
-    font-family: Georgia, serif;
-    width: 80%;
-    margin-left: 20px;
-  }
-
-  .game-header > h1, h2 {
-    color: #fff;
-    text-shadow: #000 2px 0 5px;
-    display: inline;
-    margin-right: 0.7rem;
-  }
-
-  
-.game-header{
-    width: 80%;
-    margin-left: 20px;
+.game-header > h1,
+h2 {
+  color: #fff;
+  text-shadow: #000 2px 0 5px;
+  display: inline;
+  margin-right: 0.7rem;
 }
 
 .title {
   text-align: center;
 }
 
-.center{
+.center {
   text-align: center;
-  margin-top: 50px;
-  margin-bottom: 50px;
 }
 
-.filter-selector{
+.filter-selector {
   display: flex;
   flex-direction: row;
   margin-bottom: 15px;
   margin-left: 5px;
 }
 
-.filter-labels{
+.filter-labels {
   display: inline-flex;
   flex-direction: row;
   margin-left: 5px;
@@ -65,10 +47,10 @@
   border-radius: 5px;
 }
 
-.remove-button{
+.remove-button {
   margin: 3px;
 }
 
-.remove-button:hover{
-  color:#c4000a;
+.remove-button:hover {
+  color: #c4000a;
 }
